feat: :sparkles: added simple search engine
