# app/api.go
@@ -26,6 +26,7 @@ func (app *App) InitRoutes() {
 	app.Router.HandleFunc("/shopping/create", app.Auth(app.CreateShoppingHandler)).Methods("POST")
 	app.Router.HandleFunc("/shopping/update", app.Auth(app.UpdateShoppingHandler)).Methods("POST")
 	app.Router.HandleFunc("/shopping/delete", app.Auth(app.DeleteShoppingHandler)).Methods("POST")
+	app.Router.HandleFunc("/search/recipes", app.Auth(app.SearchRecipesHandler)).Methods("POST")
 	if os.Getenv("ENV") != "prod" {
 		app.Router.PathPrefix("/swagger").Handler(httpSwagger.WrapHandler)
 	}
