# docs/swagger.json
@@ -274,6 +274,37 @@
                 }
             }
         },
+        "/search/recipes": {
+            "post": {
+                "description": "Search Recipes by Title",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "search"
+                ],
+                "summary": "Search Recipes",
+                "parameters": [
+                    {
+                        "description": "Please write search word directly",
+                        "name": "search",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/shopping/all": {
             "get": {
                 "description": "List All Shopping Lists",
